testsuite/tests/quotes/TH_abstractFamily.stderr

TH_abstractFamily.hs:11:7: error: [GHC-65904]
    Abstract closed type family not (yet) handled by Template Haskell
      type family G a where
        ..
